# cadac

./: AGENTS.md  Cargo.toml  LICENSE  README.md  go.mod  go.sum
.clinerules/: memory-bank.md
cmd/: main.go
cmd/cli/: root.go  version.go
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
models/: orders.sql  users.sql
models/bronze/: users.sql
models/gold/: orders.sql
pkg/parser/: parser.go  parser_test.go
pkg/template/: template.go
src/: args.rs  cli.rs  dependency_graph.rs  discovery.rs  discovery_test.rs  execution_test.rs  lib.rs  main.rs  parser.rs  parser_test.rs
src/execution/: databricks.rs  mod.rs  postgres.rs  snowflake.rs
